RESOLVED FIXED 54953
Web Inspector: Linking error for some InspectorController symbols
https://bugs.webkit.org/show_bug.cgi?id=54953
Summary Web Inspector: Linking error for some InspectorController symbols
Dinu Jacob
Reported 2011-02-22 06:31:01 PST
Linking fails when building webkit with JAVASCRIPT_DEBUGGER disabled with the following undefined symbols: WebCore::InspectorController::setInspectorExtensionAPI(WTF::String const&) WebCore::InspectorController::dispatchMessageFromFrontend(WTF::String const&) In InspectorController.cpp, the following methods have been incorrectly defined under #if ENABLE(JAVASCRIPT_DEBUGGER): setInspectorExtensionAPI(const String& source) hideHighlight() dispatchMessageFromFrontend(const String& message)
Attachments
Patch (1.81 KB, patch)
2011-02-22 07:39 PST, Dinu Jacob
yurys: review+
commit-queue: commit-queue-
Patch (1.50 KB, patch)
2011-02-23 08:01 PST, Dinu Jacob
no flags
Dinu Jacob
Comment 1 2011-02-22 06:31:20 PST
Patch coming
Dinu Jacob
Comment 2 2011-02-22 07:39:08 PST
WebKit Commit Bot
Comment 3 2011-02-22 21:32:14 PST
Comment on attachment 83312 [details] Patch Rejecting attachment 83312 [details] from commit-queue. Failed to run "['./Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=cr-jail-7', 'apply-..." exit_code: 2 Last 500 characters of output: " exit_code: 1 Parsed 2 diffs from patch file(s). patching file Source/WebCore/ChangeLog Hunk #1 succeeded at 1 with fuzz 3. patching file Source/WebCore/inspector/InspectorController.cpp Hunk #1 FAILED at 244. Hunk #2 succeeded at 268 with fuzz 1 (offset 1 line). 1 out of 2 hunks FAILED -- saving rejects to file Source/WebCore/inspector/InspectorController.cpp.rej Failed to run "[u'/mnt/git/webkit-commit-queue/Tools/Scripts/svn-apply', u'--reviewer', u'Yury Semikhatsky', u'-..." exit_code: 1 Full output: http://queues.webkit.org/results/7984006
Dinu Jacob
Comment 4 2011-02-23 08:01:12 PST
Changes to fix the linking errors were committed in changeset http://trac.webkit.org/changeset/79394 (https://bugs.webkit.org/show_bug.cgi?id=54743). The patch itself was committed after this patch was committed (and hence, didn't see it when submitting this patch, though the bug itself didn't come up in my search :( ). However, one method is still incorrectly under JAVASCRIPT_DEBUGGER flag. This is currently not causing an error as it is not being invoked. Attached a patch to correct this.
Dinu Jacob
Comment 5 2011-02-23 08:01:56 PST
Pavel Feldman
Comment 6 2011-02-23 08:14:31 PST
Comment on attachment 83482 [details] Patch Thanks for fixing this.
WebKit Commit Bot
Comment 7 2011-02-23 08:36:43 PST
The commit-queue encountered the following flaky tests while processing attachment 83482 [details]: animations/suspend-resume-animation.html bug 48161 (author: cmarrin@apple.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 8 2011-02-23 08:38:20 PST
Comment on attachment 83482 [details] Patch Clearing flags on attachment: 83482 Committed r79449: <http://trac.webkit.org/changeset/79449>
WebKit Commit Bot
Comment 9 2011-02-23 08:38:25 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.