2011-02-23  Jacob Dinu  <dinu.jacob@nokia.com>

Reviewed by Pavel Feldman.

        Web Inspector: Linking error for some InspectorController symbols
        https://bugs.webkit.org/show_bug.cgi?id=54953

        Moved out hideHighlight definition from under JAVASCRIPT_DEBUGGER flag

        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::hideHighlight):
        (WebCore::InspectorController::resume):

git-svn-id: svn://svn.chromium.org/blink/trunk@79449 bbb929c8-8fbe-4397-9dbb-9b2b20218538