third_party/WebKit/Source/WebCore/inspector/InspectorController.cpp
@@ -204,6 +204,11 @@ void InspectorController::dispatchMessageFromFrontend(const String& message)
     m_inspectorBackendDispatcher->dispatch(message);
 }
 
+void InspectorController::hideHighlight()
+{
+    m_inspectorAgent->hideHighlight();
+}
+
 #if ENABLE(JAVASCRIPT_DEBUGGER)
 void InspectorController::enableProfiler()
 {
@@ -260,11 +265,6 @@ void InspectorController::resume()
 {
     if (InspectorDebuggerAgent* debuggerAgent = m_inspectorAgent->debuggerAgent())
         debuggerAgent->resume();
-}
-
-void InspectorController::hideHighlight()
-{
-    m_inspectorAgent->hideHighlight();
 }
 
 #endif
